Static site first draft completed

--- a/src/css/_partials/forms.styl
+++ b/src/css/_partials/forms.styl
@@ -1,4 +1,14 @@
-input 
+input, textarea 
   background-color #F2F2F2 
   border none
   padding 1rem
+  margin .5rem 0 1rem 0
+  font-size 1.4rem
+
+  &:focus
+    outline 1px solid primaryColor
+    outline-offset -1px
+
+label 
+  width 100%
+  font-size 1.4rem
