--- a/src/css/_partials/reset.styl
+++ b/src/css/_partials/reset.styl
@@ -4,6 +4,7 @@ html
   -webkit-text-size-adjust 100%
   padding 0
   margin 0
+  background richBlack
 
 *
   box-sizing border-box
@@ -12,6 +13,7 @@ body
   margin 0
   font-size 1.8rem
   color richBlack
+  background white
 
 a, li
   text-decoration none
