--- a/src/css/_partials/typography.styl
+++ b/src/css/_partials/typography.styl
@@ -5,7 +5,7 @@
 //       url(/fonts/OpenSans-Regular.woff) format("woff")
 
 *
-  font-family Arial, Helvetica, sans-serif
+  font-family sansSerif
   font-size 10px
 
 span 
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6
   letter-spacing 0.1rem
 
 h1
-  font-size 4.8rem
+  font-size 5.6rem
 
 h2
   font-size 4.2rem
@@ -64,9 +64,3 @@ p
 
 .red
   color primaryColor
-
-.red-highlight
-  background primaryColor
-  height 2px
-  width 33px
-  margin 0 0 1.25rem 0
