--- a/src/css/_partials/variables.styl
+++ b/src/css/_partials/variables.styl
@@ -5,6 +5,8 @@ breakpointXSmall = 360px
 
 containerPadding = 3rem
 
+sansSerif = Arial, Helvetica, sans-serif
+
 primaryColor = #EE2F34
 primaryColorAccent = #BB2024
 primaryColorGradient = linear-gradient(to bottom, primaryColor 0%, primaryColorAccent 100%)
