--- a/src/css/_partials/buttons.styl
+++ b/src/css/_partials/buttons.styl
@@ -8,7 +8,7 @@
   padding 1.25rem 2.25rem
   box-sizing content-box
   margin 0
-  border-radius 100px
+  // border-radius 100px
   border none
 
   &:hover
