--- a/src/pug/_partials/footer.pug
+++ b/src/pug/_partials/footer.pug
@@ -22,4 +22,19 @@ mixin footer
           a.bold(href='tel:+441782250450') 01782 250 450
           a(href='mailto:track@fastlanekarting.co.uk') track@fastlanekarting.co.uk
           p Open 7 days 10:00am - 10:30pm
+          .footer__social
+            a(href='https://www.facebook.com/fastlanekartingindoor' target='_blank')
+              img(src='/images/social-media/facebook.svg' alt='Facebook Icon')
+            a(href='https://www.instagram.com/fastlanekarting_stoke/' target='_blank')
+              img(src='/images/social-media/instagram.svg' alt='Instagram Icon')
         .footer__column
+          h5 Enquiry Form
+          .red-highlight
+          form(name='enquiry')
+            label Your Name
+            input(type='text' required)
+            label Your Email
+            input(type='email' required)
+            label Message
+            textarea(rows='6' required)
+            button.button__primary(type='submit') Send
