Added OpenGraph image

--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -17,6 +17,7 @@ html
     meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     meta(name="theme-color" content="#BB2024")
+    meta(property="og:image" content="https://fastlanekarting.amp.studio/images/home-categories/race-packages.jpg")
 
     //- Minimal favicon setup, covers most bases. 
     //- Remember to change favicon.ico in root folder
