Added video poster

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,7 +10,7 @@ block pageScripts
 block content
 
   .header-video
-    video(src="/video/header-video-compressed.mp4" preload loop)
+    video(src="/video/header-video-compressed.mp4" poster="/video/header-video-compressed-poster.jpg" preload loop)
     .header-video__controls
       img.header-video__controls--play(src='/images/video-controls/play.svg' alt='Play Button')
 
