New video & text amends

--- a/src/pug/_partials/footer.pug
+++ b/src/pug/_partials/footer.pug
@@ -5,7 +5,7 @@ mixin footer
         .footer__column
           h5 About Us
           .red-highlight
-          p Fastlane Karting is located in Fenton, Stoke on Trent, Staffordshire and within easy driving distance of Shropshire, Cheshire and Derbyshire in the East Midlands. We operate Biz karts for Corporate & Group Parties, and Sprint karts for our arrive & drive sessions. We also have Go-Karts for kids.
+          p Fastlane Karting is located in Fenton, Stoke on Trent, Staffordshire and within easy driving distance of Shropshire, Cheshire and Derbyshire in the East Midlands. We operate Sodi karts for corporate, group parties and arrive & drive sessions. We also have Cadet karts for juniors.
         .footer__column
           h5 Address
           .red-highlight
