--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -58,6 +58,10 @@ html
       include ../../../dist/js/dollarSelect.js
       include ../../../dist/js/mobileMenu.js
       include ../../../dist/js/openingHours.js
+      include ../../../dist/js/newsletter.js      
+    
+    //- Used for contact forms
+    script(src='https://unpkg.com/axios/dist/axios.min.js' async defer)
 
     //- Extra scripts for individual pages
     block pageScripts
