--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -18,7 +18,7 @@ block content
         div
           p Arrive and Drive is for you to come and hone your skills in the Practice Lap Sessions. We can run children as low as 8 years old in the mid-week off peak times between 10.00am – 6.00pm, Monday – Friday. For drivers 12 plus you can go on the track at anytime as long as it is available but please book to avoid disappointment.
           p Time limits do not apply during off-peak times.
-          p We have Junior Karting for 10 – 13 year olds Saturday mornings at 9.00am or during the holiday periods at 10.00am. This is purely for this peer group, so please ring to book.
+          p We have #[span.bold Junior Karting] for 8 – 13 year olds Saturday mornings at 9.00am or during the holiday periods at 10.00am. This is purely for this peer group, so please ring to book.
           p Standard prices are on the 160cc karts but you can upgrade to the faster 200cc karts for an extra £5 each if you are 14+.
           p #[span.bold.red PLEASE NOTE:] All drivers require a Balacalava for hygeine reasons. Feel free to bring your own, or we can supply them for £1.50 each.
         .race-packages__price-list
@@ -27,24 +27,28 @@ block content
               li
                 div
                   h3 20 lap practice
-                  p 15 Minute Non-Stop Race
+                  p 20 Laps Non-Stop Race
                 div
-                  span £15/driver
+                  span £15/driver - 160CC
+                  span £20/driver - 200CC
               li
                 div
                   h3 50 lap practice
-                  p 30 Minutes Non-Stop or 2 x 15 Minute Races
+                  p 2 x 25 Lap (15 Minute) Races
                 div
-                  span £25/driver
+                  span £25/driver - 160CC
+                  span £30/driver - 200CC
               li
                 div
                   h3 75 lap practice
-                  p 45 Minutes Non-Stop or 3 x 15 Minute Races
+                  p 3 x 25 Lap (15 Minute) Races
                 div
-                  span £30/driver
+                  span £30/driver - 160CC
+                  span £35/driver - 200CC
               li
                 div
                   h3 100 lap practice
-                  p 60 Minutes Non-Stop or 4 x 15 Minute Races
+                  p 4 x 25 Lap (15 Minute) Races
                 div
-                  span £35/driver
+                  span £35/driver - 160CC
+                  span £40/driver - 200CC
