--- a/src/pug/corporate-events/index.pug
+++ b/src/pug/corporate-events/index.pug
@@ -30,24 +30,24 @@ block content
         ul.race-packages__price-list--packages
           li
             div
-              h3 Grand Prix
+              h3 Grand Prix Sprint
               p 4 Lap Practice Session
               p 8 x 4 Lap Heats
               p 4 Lap Semi-Final
               p 8 Lap Final Race For Top 8 Drivers
             div
-              span £750
-              span 10-20 drivers
+              span £795
+              span 12-16 drivers
           li
             div
-              h3 Super Grand Prix
+              h3 Grand Prix Max
               p 5 Lap Practice Session
               p 8 x 5 Lap Heats
               p 6 Lap Semi-Final
               p 8 Lap Final Race For Top 16 Drivers
             div
               span £995
-              span 15-25 drivers
+              span 17-21 drivers
               
       .content-block
         h2 Corporate Race Packages
@@ -68,8 +68,8 @@ block content
               p 6 Lap Semi-Final
               p 8 Lap Final Race For Top 8 Drivers
             div
-              span £1200
-              span 20-30 drivers
+              span £1250
+              span 22-26 drivers
           li
             div
               h3 Silver Package
@@ -80,7 +80,7 @@ block content
               p 12 Months Advertising At Fast Lane
             div
               span £1500
-              span 25-40 drivers
+              span 25-30 drivers
           li
             div
               h3 Gold Package
@@ -92,4 +92,4 @@ block content
               p Finger Buffet
             div
               span £2000
-              span 25-40 drivers
+              span 25-35 drivers
