--- a/src/pug/juniors-and-parties/index.pug
+++ b/src/pug/juniors-and-parties/index.pug
@@ -23,8 +23,7 @@ block content
         p This is a private party package for up to 8 drivers 8 years and older.
         p.no-margin.bold Kids' Birthday Parties Include:
         ul.race-packages__price-list--includes
-          li 3 x 15 minutes racing sessions for the birthday boy/girl
-          li 2 x 15 minute sessions for the guests
+          li 3 x 15 minutes racing sessions with all guests taking part in 2 sessions each, and a birthday person having a special treat and taking part in all 3 sessions.
           li Hot meal and squash in the private corporate room 
           li Pizza, chicken nuggets, burger or hot dog with chips
           li Orange/blackcurrant squash
@@ -33,16 +32,16 @@ block content
           li
             div
               h3 2 Hour Session with Food
-              p 1 Hour Racing, 1 Hour Food & Medals
+              p 45 Minutes Driving Time, 1 Hour Food & Medals
             div
               span £240
               span up to 8 drivers
               
       .content-block
-        h2 1 HOUR RACE / FAMILY SESSION
+        h2 1 Hour Practice / Family Session
         .red-highlight
         p Our 1 hour non-stop private sessions are perfect for parties and families looking for a great night out. This is a private party package for up to 8 drivers 8 years and older. 
-        p No food, trophies or medals are included but can they be purchased at extra cost.
+        p Includes printouts of lap times for all drivers. No food, trophies or medals are included but can they be purchased at extra cost.
         ul.race-packages__price-list--packages
           li
             div
