--- a/src/pug/layout/index.pug
+++ b/src/pug/layout/index.pug
@@ -25,8 +25,8 @@ block content
 
           .red-strip All-time fastest lap
           .fastest-lap
-            span 22.835
-            span Evan Pettit
+            span 22.628
+            span Evan Pettit & Adam Brittain
           
         .split
           img(src='/images/track-layout/track-layout.svg')
