--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -53,7 +53,7 @@ block content
           li
             div
               h3 Super Challenge
-              p 30 Minute Non-Stop Race
+              p 60 Minutes Non-Stop or 2 x 30 Minute Races
             div
               span £47.50 per driver
               span 8-10 drivers
@@ -84,7 +84,7 @@ block content
           li
             div
               h3 Super Prix
-              p 4 Lap Practice Session
+              p 6 Lap Practice Session
               p 6 x 6 Lap Heats Per Driver
               p 8 Lap Semi Final For All Drivers
               p 8 Lap Grand Final For Top 16 Drivers
