--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -342,6 +342,7 @@
             display flex
             flex-direction column
             align-items flex-end
+            white-space nowrap
 
             span
               font-family 'BigNoodleTitling'
@@ -397,7 +398,8 @@
       font-family 'Arial Black', Arial, Helvetica, sans-serif
       font-weight bold
       text-transform uppercase
-      line-height 0.75
+      line-height 1
+      margin-top -5px
 
 
 @media(max-width: breakpointMedium)
