--- a/src/pug/_partials/layout.pug
+++ b/src/pug/_partials/layout.pug
@@ -61,7 +61,7 @@ html
       include ../../../dist/js/newsletter.js      
     
     //- Used for contact forms
-    script(src='https://unpkg.com/axios/dist/axios.min.js' async defer)
+    script(src='/js/libs/axios.js' async defer)
 
     //- Extra scripts for individual pages
     block pageScripts
