Video now plays inline on iPhones

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,7 +10,7 @@ block pageScripts
 block content
 
   .header-video
-    video(src="/video/fast-lane-karting-header-no-audio.mp4" poster="/video/fast-lane-karting-header-poster.jpg" preload loop muted)
+    video(src="/video/fast-lane-karting-header-no-audio.mp4" poster="/video/fast-lane-karting-header-poster.jpg" preload loop muted playsinline)
     .header-video__controls
       img.header-video__controls--play(src='/images/video-controls/play.svg' alt='Play Button')
 
