--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -16,6 +16,18 @@
   align-items center
   background midGrey
 
+  &::-webkit-media-controls-panel 
+      display none!important
+      -webkit-appearance none 
+
+  &::--webkit-media-controls-play-button 
+    display none!important
+    -webkit-appearance none
+
+  &::-webkit-media-controls-start-playback-button 
+    display none!important
+    -webkit-appearance none
+
   &:hover
     cursor pointer
 
