--- a/src/pug/_partials/footer.pug
+++ b/src/pug/_partials/footer.pug
@@ -28,13 +28,13 @@ mixin footer
             a(href='https://www.instagram.com/fastlanekarting_stoke/' target='_blank')
               img(src='/images/social-media/instagram.svg' alt='Instagram Icon')
         .footer__column
-          h5 Enquiry Form
-          .red-highlight
-          form(name='enquiry')
-            label Your Name
-            input(type='text' required)
-            label Your Email
-            input(type='email' required)
-            label Message
-            textarea(rows='6' required)
-            button.button__primary(type='submit') Send
+          //- h5 Enquiry Form
+          //- .red-highlight
+          //- form(name='enquiry')
+          //-   label Your Name
+          //-   input(type='text' required)
+          //-   label Your Email
+          //-   input(type='email' required)
+          //-   label Message
+          //-   textarea(rows='6' required)
+          //-   button.button__primary(type='submit') Send
